# video-analyzer

./: .gitignore  MANIFEST.in  analyzer.py  audio_processor.py  config.py  prompt.py  readme.md  requirements.txt  setup.py  test_prompt_loading.py  video_analyzer.py
clients/: ollama.py  openrouter.py
config/: default_config.json
docs/: CONTRIBUTING.md  DESIGN.md  USAGES.md  design.excalidraw  sample_analysis.json
prompts/: frame_analysis.txt  narrate_storyteller.txt  video_reconstruction.txt
prompts/frame_analysis/: describe.txt  frame_analysis.txt
test_prompts/frame_analysis/: describe.txt
video-analyzer-ui/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
video-analyzer-ui/video_analyzer_ui/: __init__.py  server.py
video-analyzer-ui/video_analyzer_ui/static/css/: styles.css
video-analyzer-ui/video_analyzer_ui/static/js/: main.js
video-analyzer-ui/video_analyzer_ui/templates/: index.html
video_analyzer/: analyzer.py  audio_processor.py  cli.py  config.py  frame.py  prompt.py
video_analyzer/clients/: generic_openai_api.py  llm_client.py  ollama.py  openrouter.py
video_analyzer/config/: default_config.json
video_analyzer/prompts/frame_analysis/: frame_analysis.txt
